fix alignment issues

--- a/eventbrite-popular-events/css/main.css
+++ b/eventbrite-popular-events/css/main.css
@@ -3,11 +3,17 @@ body {
   min-width: 800px;
 }
 
+.loc {
+  margin-left: 10px !important;
+  margin-right: 10px !important;
+}
+
 .scroll-table {
   /*overflow: scroll;
   height: 80%;*/
   overflow:auto;
+  width: 100%;
   position:absolute;
-  top:150px;
+  top:120px;
   bottom:50px;
 }
